20-Apr-2013 Adding support for VisualStudio 2012, package VisualC-11.0

20-Apr-2013 Generalizing Opus.Core.Win32RegistryUtilities access and adding accessors to the current user area. If you used any functions from this before, finding 32-bit registry keys is now more explicit.

15-Apr-2013 Package assembly re-use now includes a hash of the Opus assemblies.

09-Apr-2013 Added -explain action to the NativeBuilder, which will output an explaination of why files are built, at the current verbosity level.

09-Apr-2013 Release 0.50 Alpha 4

08-Apr-2013 Added -ih option to OpusOptionCodeGenerator to ignore header updates to the delegates file. This allows updating option files on different platforms.

08-Apr-2013 Added C.ILinkerOptions.OSXFrameworks Opus.Core.StringArray option, to list the names of frameworks to link against.

05-Apr-2013 Replaced C.OSXAppBundle module type, with a Boolean option on C.ILinkerOptions, called OSXApplicationBundle (defaults to false). Module type for bundles should now just be C.Application or C.WindowsApplication, which merges better with non-OSX platforms.

04-Apr-2013 Marked XmlUtilities' plist options properties as state only, and auto-generated support files

04-Apr-2013 OpusOptionCodeGenerator now recognizes a comment // StateOnly above a property in an interface file to indicate that the property has no delegates to register.

03-Apr-2013 Added help to OpusOptionCodeGenerator if no arguments are passed.

02-Apr-2013 VisualCCommon-dev is now dependent upon WindowsSDK-6.0A.

02-Apr-2013 Released 0.50 Alpha 3

02-Apr-2013 Gcc Objective-C disables strict aliasing as it causes type punning warnings with the use of 'super'.

27-Mar-2013 Added package XmlUtilities-dev with basic NativeBuilder XML serialization. Also added an OSX Plist module.

27-Mar-2013 Updated test packages CodeGenTest-dev and CodeGenTest2-dev to use FinalizeOptions rather than individual set handlers, since they have the same side-effect.
